--- a/Portfolio/src/components/Navbar/Navbar.css
+++ b/Portfolio/src/components/Navbar/Navbar.css
@@ -8,11 +8,13 @@
     background-color: transparent;
     color: #fff;
 }
+
 .w-nav {
     position: relative;
     background: #dddddd;
-    z-index: 1000
+    z-index: 1000;
 }
+
 .w-nav:before,
 .w-nav:after {
     content: " ";
@@ -26,12 +28,14 @@
 .w-nav:after {
     clear: both
 }
+
 .container {
     z-index: 5;
     max-width: 100%;
     padding-right: 40px;
     padding-left: 40px;
 }
+
 .w-container {
     margin-left: auto;
     margin-right: auto;
@@ -101,6 +105,7 @@
     -ms-flex-pack: center;
     justify-content: center;
 }
+
 .line_wrap.nav {
     position: static;
     left: 0%;
@@ -119,6 +124,7 @@
     -ms-flex-align: center;
     align-items: center;
 }
+
 .line_nav {
     position: static;
     left: 0%;
@@ -130,18 +136,112 @@
     background-color: #fff;
 }
 
-@media screen and (max-width:991px){
+@media screen and (max-width:991px) {
     .navbar {
         height: 9vh;
     }
+
     .nav_wrap {
         padding-top: 2em;
         padding-bottom: 2em;
     }
+
+    .body {
+        font-size: 7px;
+    }
+
+    .w-container {
+        max-width: 728px;
+    }
 }
+
 @media screen and (max-width: 767px) {
     .container {
         padding-right: 20px;
         padding-left: 20px;
     }
+}
+
+.w-nav:before,
+.w-nav:after {
+    content: " ";
+    display: table;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 2;
+}
+
+.w-nav:after {
+    clear: both;
+}
+
+.w-nav:before,
+.w-nav:after {
+    content: " ";
+    display: table;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 2;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #E1E1E1;
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+    cursor: grab;
+}
+
+html {
+    font-family: sans-serif;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+.w-container:before,
+.w-container:after {
+    content: " ";
+    display: table;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 2;
+}
+
+.w-container:after {
+    clear: both;
+}
+
+.w-container:before,
+.w-container:after {
+    content: " ";
+    display: table;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    grid-column-end: 2;
+    grid-row-end: 2;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 1px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #E1E1E1;
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+    cursor: grab;
 }
